<resources>
    <string name="app_name">Wallet Guard</string>
    <string name="app_slogan">Plan Your Budget</string>
    <string name="app_welcome">Welcome To Wallet Guard</string>

    <string name="sr_log_text">Sign In to Continue</string>
    <string name="sr_username_hint">Enter Username</string>
    <string name="sr_password_hint">Enter Password</string>
    <string name="sr_btn_fr_pass">Forget Password ?</string>
    <string name="sr_btn_login">Login</string>
    <string name="sr_nw_user">New User?Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wallet Guard</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_bnk">Bank Actions</string>

    <string name="menu_home">Home</string>
    <string name="menu_tran_lst">Transaction List</string>
    <string name="menu_bnk_trans_lst">Bank Transaction List</string>
    <string name="menu_cre_bnk">Create New Account</string>

    <!--    Define SignUp Acctivity String Resources -->
    <string name="str_siup_title">Wallet Guard Sign Up</string>
    <string name="str_siup_conf">Are You Confirm Sign Up?</string>
    <string name="str_siup_email">Enter E-mail</string>
    <string name="str_siup_con_pass">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>

    <!--    Define Home Fragment String Resources -->
    <string name="incomplite_func_msg">Operation Not Yed Added</string>
    <string name="lod_err">Error..</string>
    <string name="lod">loading..</string>

    <string name="hom_lst_inc">Last Month Income</string>
    <string name="hom_cur_inc">Current Month Income</string>
    <string name="hom_lst_exp">Last Month Exp</string>
    <string name="hom_cur_exp">Current Month Exp</string>
    <string name="hom_acc_boc">BOC</string>
    <string name="hom_acc_comm">Commercial</string>
    <string name="hom_acc_smapth">Sampath</string>
    <string name="hom_cat_inv">Income Category</string>
    <string name="hom_cat_exp">Exp Category</string>
    <string name="hom_cat_other">Other Category</string>

    <!--    Define Category Activity String Resources -->
    <string name="cre_cat_title">Create New Category</string>
    <string name="cre_cat_con">Are You Confirm Create New Category ?</string>
    <string name="rbt_cat_income">Income</string>
    <string name="rbt_cat_exp">Expense</string>
    <string name="rbt_switch">Switch To Transaction Type</string>
    <string name="cat_name">Enter Category Name</string>
    <string name="cat_desc">Enter Category Description</string>
    <string name="btn_cat_save">Save And New</string>
    <string name="btn_cat_save_ext">Save And Exist</string>
    <string name="btn_cat_update">Update</string>

    <!--    Define Transaction Activity String Resources -->
    <string name="txt_cat_hint">-Select Category-</string>
    <string name="txt_cat">Enter Description</string>
    <string name="txt_amount">Enter Amount</string>
    <string name="txt_date">Select Date :</string>
    <string name="str_tran_title">Create New Transaction</string>
    <string name="str_tran_co">Do You Confirm Create New Translation ?</string>

    <!--    Define Report Activity String Resources -->
    <string name="rbt_inc_vs_exp">Income Vs Expense</string>
    <string name="rbt_inc_by_cat">Income By Category</string>
    <string name="rbt_exp_by_cat">Expense Vs Category</string>
    <string name="dpt_start_date">Start Date :</string>
    <string name="dpt_end_date">End Date  :</string>
    <string name="btn_gen_rpt">: Generate Report :</string>
    <string name="rep_pg_no">Page Number</string>

    <!--    Define Bank Module Related String Resources -->
    <string name="str_wit">Withdrawal</string>
    <string name="str_dept">Deposit</string>
    <string name="str_tr">Transfer</string>
    <string name="bnk_name_hint">Enter Bank Name</string>
    <string name="bnk_acc_no_hint">Enter Account Number</string>
    <string name="init_bal_hint">Enter Init Balance</string>
    <string name="txt_sel_frm_acc">Select From Account :</string>
    <string name="txt_sel_to_acc">Select To Account :</string>
    <string name="txt_sel_acc">Select Account :</string>
    <string name="txt_ini">N/A</string>
    <string name="txt_val">00.00</string>
</resources>