<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tran_list"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_tran_lst" />
        <item
            android:id="@+id/nav_bnk_tran_lst"
            android:icon="@drawable/ic_transfer"
            android:title="@string/menu_bnk_trans_lst" />
        <item
            android:id="@+id/nav_bnk"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_cre_bnk" />
    </group>
</menu>