<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:contentDescription="@string/app_name"
        android:src="@drawable/wg_app_logo" />

    <TextView
        android:id="@+id/txt_logo_name"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:transitionName="txt_app_name"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/log_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sr_log_text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edi_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_face"
            android:layout_height="wrap_content"
            android:hint="@string/sr_username_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:text="harith"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edi_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_lock"
            android:layout_marginTop="5dp"
            android:hint="@string/sr_password_hint"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="123"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_fro_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="3dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/sr_btn_fr_pass"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttons"
            android:elevation="0dp"
            android:onClick="doLogin"
            android:text="@string/sr_btn_login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:onClick="initSignUp"
            android:elevation="0dp"
            android:text="@string/sr_nw_user"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>