<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ReportActivity">

    <TextView
        android:id="@+id/txt_frm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/dpt_start_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_frm_dpt"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_frm_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_to_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/dpt_end_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_frm_date" />

    <ImageButton
        android:id="@+id/btn_open_dpt"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_to_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_frm_date" />

    <RadioGroup
        android:id="@+id/rbd_cat_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_to_date">

        <RadioButton
            android:id="@+id/radio_income_vs_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="1"
            android:text="@string/rbt_inc_vs_exp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_inc_by_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/rbt_inc_by_cat"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/radio_exp_by_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/rbt_exp_by_cat"
            android:textStyle="bold" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_cate"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:onClick="generateReport"
        android:tag="save_exist"
        android:text="@string/btn_gen_rpt"
        app:icon="@drawable/ic_rep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbd_cat_type" />


</androidx.constraintlayout.widget.ConstraintLayout>